[package]
name = "rss-readear"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.13", features = ["blocking", "json"] }
rss = "2.0.1"
colored = "2"
dialoguer = "0.10.2"
console = "0.15.2"
phf = { version = "0.11",  features = ["macros"] }
